--- a/charts.html
+++ b/charts.html
@@ -3,72 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work Volume Data Visualizer</title>
+    <title>Presentation Bar Chart Generator</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 20px; background-color: #f4f7f6; }
-        .container { max-width: 1200px; margin: auto; background: #fff; padding: 30px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        h1 { color: #333; border-bottom: 2px solid #eee; padding-bottom: 10px; }
-        h2 { color: #555; margin-top: 30px; }
-        .chart-container { 
-            display: flex; 
-            flex-direction: column; 
+        body { 
+            font-family: 'Inter', sans-serif; 
+            margin: 0; 
+            padding: 20px; 
+            background-color: #eef2f5; 
+            color: #1f2937;
+        }
+        .container { 
+            max-width: 1400px; 
+            margin: auto; 
+            background: #ffffff; 
+            padding: 30px; 
+            border-radius: 12px; 
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1); 
+        }
+        h1 { 
+            color: #10b981; 
+            font-size: 2.25rem;
+            margin-bottom: 20px;
+            border-bottom: 3px solid #e5e7eb;
+            padding-bottom: 10px;
+        }
+        h2 { 
+            color: #374151; 
+            margin-top: 40px; 
+            font-size: 1.5rem;
+            border-left: 4px solid #10b981;
+            padding-left: 10px;
+        }
+        .chart-grid { 
+            display: grid;
+            grid-template-columns: 1fr;
             gap: 40px; 
             margin-top: 20px;
         }
+        @media (min-width: 1024px) {
+            .chart-grid {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
         .chart-box {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            background: #f9fafb;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+            border: 1px solid #d1d5db;
         }
         input[type="file"] {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            padding: 12px;
+            border: 2px solid #a7f3d0;
+            border-radius: 8px;
             cursor: pointer;
             width: 100%;
             box-sizing: border-box;
+            transition: all 0.3s;
+            background-color: #ecfdf5;
+        }
+        input[type="file"]:hover {
+            border-color: #059669;
+            box-shadow: 0 0 5px rgba(16, 185, 129, 0.5);
         }
         #upload-section { margin-bottom: 30px; }
-        #loading-message { color: #007bff; font-weight: bold; margin-top: 10px; display: none; }
+        #loading-message { 
+            color: #10b981; 
+            font-weight: 600; 
+            margin-top: 15px; 
+            display: none; 
+            animation: pulse 1.5s infinite;
+        }
+        #error-message { 
+            background-color: #fee2e2; 
+            color: #991b1b; 
+            padding: 15px; 
+            border-radius: 8px; 
+            display: none; 
+            margin-top: 20px; 
+            font-weight: 500;
+        }
+        @keyframes pulse {
+            0% { opacity: 0.6; }
+            50% { opacity: 1; }
+            100% { opacity: 0.6; }
+        }
     </style>
+    <!-- Load Chart.js for visualization -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <!-- Load Chart.js Datalabels Plugin for showing numbers on bars -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+    <!-- Load PapaParse for robust CSV handling -->
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
 
 <div class="container">
-    <h1>📊 Presentation Chart Generator</h1>
+    <h1>🚀 Presentation Chart Generator</h1>
     <div id="upload-section">
-        <p><strong>Step 1:</strong> Please upload your CSV file. Ensure the structure is the same (Work Groups, Jan, Feb, Mar, etc.) and the first row is *not* the header.</p>
+        <p><strong>Upload your clean CSV file below.</strong> The header row (Work Groups, Jan, Feb, etc.) should be the first row of the file.</p>
         <input type="file" id="csvFileInput" accept=".csv" onchange="handleFileChange(event)">
         <div id="loading-message">Processing data and generating charts...</div>
+        <div id="error-message"></div>
     </div>
 
     <div id="chart-output" style="display: none;">
-        <h2>Monthly Work Volume Totals (Jan - Sep)</h2>
-        <div class="chart-box">
-            <canvas id="monthlyTotalsChart"></canvas>
-        </div>
-        
-        <h2>Monthly Work Volume Breakdown by Work Group</h2>
-        <div class="chart-box">
-            <canvas id="stackedBarChart"></canvas>
+        <div class="chart-grid">
+            <div class="chart-box">
+                <h2>Total Work Volume by Month</h2>
+                <canvas id="monthlyTotalsChart"></canvas>
+            </div>
+            <div class="chart-box">
+                <h2>Monthly Breakdown by Work Group</h2>
+                <canvas id="stackedBarChart"></canvas>
+            </div>
         </div>
     </div>
-    
-    <div id="error-message" style="color: red; display: none; margin-top: 20px;"></div>
 </div>
 
 <script>
+    // Register the datalabels plugin globally
+    Chart.register(ChartDataLabels);
+
     const MONTHS = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep'];
     let chart1, chart2;
 
-    // Fixed color palette for the stacked chart
+    // Fixed color palette for visual appeal
     const COLORS = [
-        '#36A2EB', '#FF6384', '#FF9F40', '#4BC0C0', '#9966FF',
-        '#FFCD56', '#C9CBCF', '#6A89CC', '#E84393', '#1ABC9C'
+        '#10b981', '#f97316', '#3b82f6', '#ef4444', '#8b5cf6',
+        '#f59e0b', '#06b6d4', '#6b7280', '#ec4899', '#34d399'
     ];
+
+    /**
+     * Common options for datalabels plugin.
+     */
+    const datalabelsOptions = {
+        color: '#fff',
+        font: { weight: 'bold', size: 10 },
+        formatter: (value) => value > 0 ? value : null, // Only show labels for values > 0
+        textShadowBlur: 2,
+        textShadowColor: 'rgba(0,0,0,0.5)',
+        anchor: 'center',
+        align: 'center',
+    };
 
     /**
      * Reads and processes the uploaded file.
@@ -83,29 +160,21 @@
 
         const reader = new FileReader();
         reader.onload = function(e) {
-            // The file has a garbage row ('Table 1...') before the header.
-            const rawText = e.target.result;
-            const lines = rawText.split('\n');
-            // Skip the first line and join the rest back into a string
-            const dataLines = lines.slice(1);
-            const processedCSV = dataLines.join('\n');
-
-            // Use PapaParse to parse the modified CSV string
-            Papa.parse(processedCSV, {
+            // Use PapaParse to parse the clean CSV string (header is the first row)
+            Papa.parse(e.target.result, {
                 header: true,
-                dynamicTyping: true, // Tries to convert values to numbers/booleans
+                dynamicTyping: true, 
                 skipEmptyLines: true,
                 complete: function(results) {
                     document.getElementById('loading-message').style.display = 'none';
                     if (results.errors.length > 0) {
-                        displayError('CSV Parsing Error: ' + results.errors[0].message);
-                        return;
+                        return displayError('CSV Parsing Error: ' + results.errors[0].message);
                     }
                     createCharts(results.data);
                 },
                 error: function(err) {
                     document.getElementById('loading-message').style.display = 'none';
-                    displayError('An error occurred during file parsing: ' + err.message);
+                    return displayError('An error occurred during file parsing: ' + err.message);
                 }
             });
         };
@@ -131,13 +200,11 @@
         const grandTotalRow = data.find(row => row['Work Groups'] === 'Grand Total');
 
         if (!grandTotalRow) {
-            displayError('Could not find the "Grand Total" row in the data. Please check your file format.');
-            return;
+            return displayError('Could not find the "Grand Total" row in the data. Check that your header row is correct and includes "Work Groups".');
         }
 
         // --- CHART 1: MONTHLY TOTALS ---
         const monthlyTotals = MONTHS.map(month => {
-            // Ensure values are treated as numbers, converting null/empty/NaN to 0
             const value = parseFloat(grandTotalRow[month]);
             return isNaN(value) ? 0 : value;
         });
@@ -150,10 +217,7 @@
                 datasets: [{
                     label: 'Total Work Count',
                     data: monthlyTotals,
-                    backgroundColor: [
-                        '#36A2EB', '#FF6384', '#FF9F40', '#4BC0C0', 
-                        '#9966FF', '#FFCD56', '#C9CBCF', '#6A89CC', '#E84393'
-                    ],
+                    backgroundColor: COLORS.slice(0, MONTHS.length),
                     borderColor: '#fff',
                     borderWidth: 1
                 }]
@@ -163,7 +227,14 @@
                 plugins: {
                     legend: { display: false },
                     title: { display: true, text: 'Total Work Volume by Month (Jan - Sep)' },
-                    tooltip: { mode: 'index', intersect: false }
+                    tooltip: { mode: 'index', intersect: false },
+                    datalabels: {
+                        ...datalabelsOptions,
+                        color: (context) => context.dataset.data[context.dataIndex] > 600 ? '#fff' : '#000',
+                        anchor: 'end',
+                        align: 'top',
+                        offset: 5,
+                    }
                 },
                 scales: {
                     x: { title: { display: true, text: 'Month' } },
@@ -184,7 +255,7 @@
             return {
                 label: groupName,
                 data: dataPoints,
-                backgroundColor: COLORS[index % COLORS.length]
+                backgroundColor: COLORS[index % COLORS.length],
             };
         });
 
@@ -199,7 +270,13 @@
                 responsive: true,
                 plugins: {
                     title: { display: true, text: 'Monthly Work Volume Breakdown by Work Group' },
-                    tooltip: { mode: 'index', intersect: false }
+                    tooltip: { mode: 'index', intersect: false },
+                    datalabels: {
+                         ...datalabelsOptions,
+                         // Custom styling for stacked bars: label is white and centered.
+                         color: '#fff',
+                         display: (context) => context.dataset.data[context.dataIndex] > 40, // Only show labels for significant stacks
+                    }
                 },
                 scales: {
                     x: { stacked: true, title: { display: true, text: 'Month' } },
@@ -208,7 +285,7 @@
             }
         });
 
-        document.getElementById('chart-output').style.display = 'block';
+        document.getElementById('chart-output').style.display = 'grid';
     }
 
     function displayError(message) {
